--- a/jennamoduli1.html
+++ b/jennamoduli1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Jenna</title>
+<title>Page Title</title>
 </head>
 <body>
-<h1>This is a Arvind</h1>
+<h1>This is a Jenna</h1>
 <p>This is my 1st html page on web app.</p>
 </body>
 </html>
