--- a/index.html
+++ b/index.html
@@ -3,27 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css"
     <title>Jennan ensimmäinen HTML sivu</title>
 </head>
 <body>
     <header>
-        <h1>Tervetuloa minun sivuilleni</h1>
+        <h1 class="header-example">Tervetuloa minun sivuilleni</h1>
     </header>
 
+    <p class="color-example">
+        Tässä on esittely sivuistani.
+    </p>
+
     <nav>
-        <ul>
-            <li><a href="#main-content">Siirry pääsisältöön</a></li>
-            <li><a href="#footer">Siirry alatunnisteeseen</a></li>
+        <ul class="list-example">
+            <li>Ensimmäinen</li>
+            <li>Toinen</li>
+            <li>Kolmas</li>
         </ul>
     </nav>
 
     <main>
         <h2>Pääsisältö</h2>
-        <p>Tämä on sivujeni pääsisältö</p>
+        <p class="text-example">
+        Tämä on sivujeni pääsisältö
+    </p>
     </main>
 
     <footer id="footer">
         <p>&copy; 2025 Jenna</p>
     </footer>
+
+    <div class="div-example">
+        Sivun lopetus
+    </div>
 </body>
 </html>
