--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1 class="header-example">Tervetuloa minun sivuilleni</h1>
+        <h1 class="header-example">
+            Tervetuloa minun sivuilleni
+        </h1>
     </header>
 
     <p class="color-example">
@@ -17,9 +19,9 @@
 
     <nav>
         <ul class="list-example">
-            <li>Ensimmäinen</li>
-            <li>Toinen</li>
-            <li>Kolmas</li>
+            <li>Ensimmäinen sisältö</li>
+            <li>Toinen sisältö</li>
+            <li>Kolmas sisältö</li>
         </ul>
     </nav>
 
