--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     </nav>
 
     <main>
-        <h2>Pääsisältö</h2>
+        <h2 class="text-example">
+            Pääsisältö
+        </h2>
         <p class="text-example">
         Tämä on sivujeni pääsisältö
     </p>
