--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Kolmas sisältö</li>
         </ul>
     </nav>
-<a href="index.html" class="top-left-link">Mene pääsivulle</a>
+<a href="index.html" class="top-right-link">Mene pääsivulle</a>
     <main>
         <h2 class="text-example">
             Pääsisältö
