--- a/second.html
+++ b/second.html
@@ -2,7 +2,7 @@
 <html lang="fi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="widht=device-width, initial-scale=1.0">
+    <meta name="viewport" content="device-width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
 <title>Jennan HTML sivu</title>
 </head>
