--- a/7B/module7.html
+++ b/7B/module7.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
+  
   <title>Jenna Nikali</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,19 +18,19 @@
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
   .bg-1 { 
-    background-color: #f5b6e2; /* pink */
+    background-color: #f5b6e2;
     color: #ffffff;
   }
   .bg-2 { 
-    background-color: #c8e7f8; /* Dark Blue */
+    background-color: #c8e7f8; 
     color: #ffffff;
   }
   .bg-3 { 
-    background-color: #ffffff; /* White */
+    background-color: #ffffff; 
     color: #555555;
   }
   .bg-4 { 
-    background-color: #2f2f2f; /* Black Gray */
+    background-color: #2f2f2f; 
     color: #fff;
   }
   .container-fluid {
@@ -53,7 +53,7 @@
 </head>
 <body>
 
-<!-- Navbar -->
+
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
@@ -74,44 +74,39 @@
   </div>
 </nav>
 
-<!-- First Container -->
 <div class="container-fluid bg-1 text-center">
   <h3 class="margin">Kuka minä olen?</h3>
   <img src="jenna.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Jenna" width="350" height="350">
   <h3>Olen 25-vuotias töiden ohelle IT-tradenomiksi opiskeleva nainen.</h3>
 </div>
 
-<!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin">Mitä minä teen?</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-  <a href="#" class="btn btn-default btn-lg">
-    <span class="glyphicon glyphicon-search"></span> Search
-  </a>
+  <p>Käyn töissä, opiskelen, syön, käyn salilla ja nukun. Vietän myös aikaa kavereideni kanssa. 
+  </p>
 </div>
 
-<!-- Third Container (Grid) -->
 <div class="container-fluid bg-3 text-center">    
   <h3 class="margin">Mistä minut löytää?</h3><br>
   <div class="row">
     <div class="col-sm-4">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p> Minut voi löytää työpaikaltani AJ Tuotteilta.</p>
+      <img src="aj.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Suurimman osan ajasta minut löytää kotoa.</p>
+      <img src="koti.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4"> 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+      <p>Jos en ole kotona tai töissä, olen kavereiden kanssa viettämässä aikaa.</p>
+      <img src="group.jpg" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
 </div>
 
-<!-- Footer -->
+
 <footer class="container-fluid bg-4 text-center">
-  <p>Bootstrap Theme Made By <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
+  <p>@Made by Jenna, with help of Bootstrap <a href="https://www.w3schools.com">www.w3schools.com</a></p> 
 </footer>
 
 </body>
