--- a/8B/index.html
+++ b/8B/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <meta charset="UTF-8" />
- <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <meta charset="UTF-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Kotisivuni</title>
- <link rel="stylesheet" href="style.css" />
- <link rel="icon" href="jn.jpg" type="image/x-icon" />
+ <link rel="stylesheet" href="style.css">
+ <link rel="icon" href="jn.jpg" type="image/x-icon">
  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="style.css">
 </head>
 <body>
@@ -36,8 +36,8 @@
  <footer>
  <p>&copy; 2025 Minun verkkosivuni</p>
  <div class="social-icons">
- <a href="https://www.linkedin.com/in/jenna-nikali-8009001a0" target="_blank"><img src="linkedin.png" alt="LinkedIn" /></a>
- <a href="https://www.instagram.com/nikalijenna" target="_blank"><img src="instagram.png" alt="Instagram"/></a>
+ <a href="https://www.linkedin.com/in/jenna-nikali-8009001a0" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
+ <a href="https://www.instagram.com/nikalijenna" target="_blank"><img src="instagram.png" alt="Instagram"></a>
  </div>
  </footer>
 </body>
